feat(web): add index page, merge with upload page feat(web): add funcMap to templates refactor(api): change SolvePayload to SolveRequest chore(swagger): update docs feat(css): add css feat(js): oauth logout fix(web): add authorization only when token exists feat(solver): sort registered keys
