# cmd/web/docs/swagger.json
@@ -96,7 +96,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/api.SolvePayload"
+                            "$ref": "#/definitions/api.SolveRequest"
                         }
                     }
                 ],
@@ -142,7 +142,7 @@
         }
     },
     "definitions": {
-        "api.SolvePayload": {
+        "api.SolveRequest": {
             "type": "object",
             "properties": {
                 "input": {
